LPS-56633 Convert usages of primitive wrappers (apply LPS-56529 to plugins)