@@ -183,7 +183,7 @@ public class MessageLocalServiceImpl extends MessageLocalServiceBaseImpl {
 
 		dynamicQuery.add(RestrictionsFactoryUtil.eq("folderId", folderId));
 		dynamicQuery.add(
-			RestrictionsFactoryUtil.gt("remoteMessageId", new Long(0)));
+			RestrictionsFactoryUtil.gt("remoteMessageId", Long.valueOf(0)));
 
 		if (oldest) {
 			dynamicQuery.addOrder(OrderFactoryUtil.asc("remoteMessageId"));
